Tests/CompilerTests/negative/illegal-inlining.diagnostics.expected
negative/illegal-inlining.hylo:14.5-14: error: use of non-exposed function in inlined function
    self.m1()
    ~~~~~~~~~
